# api/v1/dto/comment_dto.go
@@ -14,14 +14,22 @@
  *    limitations under the License.
  */
 
-package models
+/*
+ * @Package dto
+ * @Author Quan Chen
+ * @Date 2020/3/19
+ * @Description
+ *
+ */
+package dto
 
-// 帖子
-type Post struct {
-	Model
-	Title   string `json:"title" gorm:"column:title" valid:"Required"`       // 标题
-	Content string `json:"content" gorm:"column:content" valid:"Required"`   // 内容
-	Summary string `json:"summary" gorm:"column:summary"`                    // 摘要
-	UserID  int    `json:"user_id" gorm:"column:user_id" valid:"Required"`   // 用户ID
-	BoardID int    `json:"board_id" gorm:"column:board_id" valid:"Required"` // 版块ID
+type CommentUpdate struct {
+	ID             int    `json:"id"`              // 评论ID
+	CommentContent string `json:"comment_content"` // 评论的内容
+}
+type Comment struct {
+	ID             int    `json:"id"`              // 评论ID
+	CommentContent string `json:"comment_content"` // 评论内容
+	FromUser       User   `json:"from_user"`       // 评论者
+	ToUser         User   `json:"to_user"`         // 被评论者
 }
