# api/v1/dto/user_dto.go
@@ -14,14 +14,17 @@
  *    limitations under the License.
  */
 
-package models
+/*
+ * @Package dto
+ * @Author Quan Chen
+ * @Date 2020/3/19
+ * @Description
+ *
+ */
+package dto
 
-// 帖子
-type Post struct {
-	Model
-	Title   string `json:"title" gorm:"column:title" valid:"Required"`       // 标题
-	Content string `json:"content" gorm:"column:content" valid:"Required"`   // 内容
-	Summary string `json:"summary" gorm:"column:summary"`                    // 摘要
-	UserID  int    `json:"user_id" gorm:"column:user_id" valid:"Required"`   // 用户ID
-	BoardID int    `json:"board_id" gorm:"column:board_id" valid:"Required"` // 版块ID
+type User struct {
+	ID       int    `json:"id"`       // 用户ID
+	Username string `json:"username"` // 用户名
+	Name     string `json:"name"`     // 名称
 }
