# docs/swagger.json
@@ -25,7 +25,7 @@
                   "in": "body",
                   "required": true,
                   "schema": {
-                    "$ref": "#/definitions/router.auth"
+                    "$ref": "#/definitions/api.auth"
                   }
                 }
               ],
@@ -120,7 +120,7 @@
           }
         }
       },
-      "/v1/board": {
+      "/v1/broad": {
         "get": {
           "produces": [
             "application/json"
@@ -145,7 +145,7 @@
           }
         }
       },
-      "/v1/board/{id}": {
+      "/v1/broad/{id}": {
         "get": {
           "produces": [
             "application/json"
@@ -179,7 +179,7 @@
           }
         }
       },
-      "/v1/board/{id}/posts": {
+      "/v1/broad/{id}/posts": {
         "get": {
           "produces": [
             "application/json"
@@ -219,6 +219,125 @@
               "description": "升序, 降序",
               "name": "sorter",
               "in": "query"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            }
+          }
+        }
+      },
+      "/v1/comment": {
+        "put": {
+          "security": [
+            {
+              "ApiKeyAuth": []
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "Comment"
+          ],
+          "summary": "修改评论",
+          "parameters": [
+            {
+              "description": "comment",
+              "name": "comment",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/dto.CommentUpdate"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            }
+          }
+        },
+        "post": {
+          "security": [
+            {
+              "ApiKeyAuth": []
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "Comment"
+          ],
+          "summary": "新增评论",
+          "parameters": [
+            {
+              "description": "comment",
+              "name": "comment",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/models.Comment"
+              }
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            }
+          }
+        },
+        "delete": {
+          "security": [
+            {
+              "ApiKeyAuth": []
+            }
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "Comment"
+          ],
+          "summary": "删除评论",
+          "parameters": [
+            {
+              "description": "ids",
+              "name": "ids",
+              "in": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/dto.Ids"
+              }
             }
           ],
           "responses": {
@@ -414,11 +533,6 @@
       },
       "/v1/post/{id}": {
         "get": {
-          "security": [
-            {
-              "ApiKeyAuth": []
-            }
-          ],
           "produces": [
             "application/json"
           ],
@@ -450,23 +564,156 @@
             }
           }
         }
+      },
+      "/v1/post/{id}/comments": {
+        "get": {
+          "produces": [
+            "application/json"
+          ],
+          "tags": [
+            "Post"
+          ],
+          "summary": "获取帖子的评论",
+          "parameters": [
+            {
+              "type": "string",
+              "description": "ID",
+              "name": "id",
+              "in": "path",
+              "required": true
+            },
+            {
+              "type": "integer",
+              "description": "页数",
+              "name": "page",
+              "in": "query"
+            },
+            {
+              "type": "integer",
+              "description": "条数",
+              "name": "size",
+              "in": "query"
+            },
+            {
+              "type": "string",
+              "description": "排序字段",
+              "name": "order_by",
+              "in": "query"
+            },
+            {
+              "type": "string",
+              "description": "升序, 降序",
+              "name": "sorter",
+              "in": "query"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "$ref": "#/definitions/app.Response"
+              }
+            }
+          }
+        }
       }
     },
     "definitions": {
-        "app.Response": {
-          "type": "object",
-          "properties": {
-            "code": {
+      "api.auth": {
+        "type": "object",
+        "properties": {
+          "password": {
+            "description": "密码",
+            "type": "string"
+          },
+          "username": {
+            "description": "用户名",
+            "type": "string"
+          }
+        }
+      },
+      "app.Response": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "integer"
+          },
+          "data": {
+            "type": "object"
+          },
+          "msg": {
+            "type": "string"
+          }
+        }
+      },
+      "dto.CommentUpdate": {
+        "type": "object",
+        "properties": {
+          "comment_content": {
+            "description": "评论的内容",
+            "type": "string"
+          },
+          "id": {
+            "description": "评论ID",
+            "type": "integer"
+          }
+        }
+      },
+      "dto.Ids": {
+        "type": "object",
+        "properties": {
+          "ids": {
+            "description": "帖子IDs",
+            "type": "array",
+            "items": {
               "type": "integer"
-            },
-            "data": {
-              "type": "object"
-            },
-            "msg": {
-              "type": "string"
             }
           }
-        },
+        }
+      },
+      "models.Comment": {
+        "type": "object",
+        "properties": {
+          "comment_content": {
+            "description": "评论内容",
+            "type": "string"
+          },
+          "created_on": {
+            "description": "新建时间",
+            "type": "integer"
+          },
+          "deleted_on": {
+            "description": "删除时间 当未被删除时,即为0,忽略此字段",
+            "type": "integer"
+          },
+          "from_uid": {
+            "description": "评论者ID",
+            "type": "integer"
+          },
+          "id": {
+            "description": "ID",
+            "type": "integer"
+          },
+          "modified_on": {
+            "description": "修改时间",
+            "type": "integer"
+          },
+          "post_id": {
+            "description": "主题ID",
+            "type": "integer"
+          },
+          "to_uid": {
+            "description": "被评论者ID",
+            "type": "integer"
+          }
+        }
+      },
       "models.Post": {
         "type": "object",
         "properties": {
@@ -483,7 +730,7 @@
             "type": "integer"
           },
           "deleted_on": {
-            "description": "删除时间",
+            "description": "删除时间 当未被删除时,即为0,忽略此字段",
             "type": "integer"
           },
           "id": {
@@ -524,7 +771,7 @@
             "type": "integer"
           },
           "deleted_on": {
-            "description": "删除时间",
+            "description": "删除时间 当未被删除时,即为0,忽略此字段",
             "type": "integer"
           },
           "description": {
@@ -586,19 +833,6 @@
           },
           "sorter": {
             "description": "升序, 降序",
-            "type": "string"
-          }
-        }
-      },
-      "router.auth": {
-        "type": "object",
-        "properties": {
-          "password": {
-            "description": "密码",
-            "type": "string"
-          },
-          "username": {
-            "description": "用户名",
             "type": "string"
           }
         }
